--- a/task-app/src/index.css
+++ b/task-app/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap");
 
-body{
+body {
   font-family: "Comfortaa", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
   padding: 0;
   border: 0;
-  margin:0;
+  margin: 0;
 }
